refactor: small fixes for token services